<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.movie1.DetailActivity"
    android:orientation="vertical"
    android:background="@android:color/black">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/part2baselinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <ImageView
        android:layout_marginLeft="10dp"
        android:layout_width="180dp"
        android:layout_height="@dimen/detailImageHeight"
        android:id="@+id/detail_image_iv"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailTitle"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_movie_title_tv"
        android:textColor="@android:color/white"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailRating"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_rating_tv"
        android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailReleaseDate"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/release_date_tv"
        android:textColor="@android:color/white"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="50dp">
       <Button
           android:gravity="center_horizontal"
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:background="@drawable/heart"
           android:id="@+id/heart_button"/>
            <TextView
                android:paddingLeft="3dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tap_to_favourite"
                android:textColor="@android:color/white"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailSynopsis"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/synopsis_tv"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:layout_marginLeft="7dp"
        android:paddingBottom="10dp"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trailer_linear"
            android:orientation="vertical">
            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Trailers"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/Reviews"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>





        </LinearLayout>
</ScrollView>
    </LinearLayout>
